--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="css/styles.css">
 
     <!-- Falta importar jQuery -->
+	<script src="js/jquery-3.4.1.min.js"> </script>
     <script src="js/datos.js"></script>
     <script src="js/script.js"></script>
 </head>
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">Ejercicio jQuery</a>
@@ -19,18 +21,18 @@
     
     <div class="container principal">
         <div class="titulo">
-            <h1>Cuenta de Github de <span class="nombre-de-usuario" id="id_usuario">-</span></h1>
+            <h1>Cuenta de Github de <span class="nombre-de-usuario" id="id_usuario"></span><input id="inputusser"></input> </h1>
         </div>
 
-        <button class="btn btn-danger" id="boton_cargar">Cargar datos</button>
-        <button class="btn btn-warning">Reiniciar</button>
+        <button class="btn btn-danger"   id="boton_cargar">Cargar datos</button>
+        <button class="btn btn-warning" id="boton_reiniciar">Reiniciar</button>
 
         <br>
         <br>
 
         <div class="otros-datos row">
             <div class="col-md-6 text-center">
-                <img src="https://cdn.iconscout.com/icon/free/png-256/avatar-372-456324.png" style="opacity: 0.4">
+                <img src="https://cdn.iconscout.com/icon/free/png-256/avatar-372-456324.png" class="dato" style="opacity: 0.4" id="avatar">
             </div>
             <div class="col-md-6">
                 <div class="row">
@@ -40,7 +42,7 @@
                     </div>
                     <div class="col-md-12">
                         <h3 class="label">Empresa</h3>
-                        <h3 class="dato">-</h3>
+                        <h3 class="dato"   id="nombre_empresa">-</h3>
                     </div>
                 </div>
             </div>
@@ -55,7 +57,7 @@
             </div>
             <div class="col-md-3">
                 <h3 class="label">Gists</h3>
-                <h3 class="dato">0</h3>
+                <h3 class="dato" id="numero_gits">0</h3>
             </div>
             <div class="col-md-3">
                 <h3 class="label">Seguidos</h3>
@@ -63,7 +65,8 @@
             </div>
             <div class="col-md-3">
                 <h3 class="label">Seguidores</h3>
-                <h3 class="dato">0</h3>
+				<h3 class="dato" id="numero_seguidores">0</h3>
+                
             </div>
         </div>
 
@@ -81,9 +84,9 @@
                     </thead>
                     <tbody id="cuerpo_table">
                         <tr>
-                            <td>ID</td>
-                            <td>Repositorio</td>
-                            <td>Descripción</td>
+                            <td class="dato" id="ID_repositorio">ID</td>
+                            <td class="dato" id="repositorio">Repositorio</td>
+                            <td class="dato" id="descripcion">Descripción</td>
                         </tr>
                     </tbody>
                 </table>
